force-app/main/default/objects/FulfillmentOrder/FulfillmentOrder.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>