force-app/main/default/objects/FulfillmentOrder/fields/Fulfilled_to_Location_External_Reference__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_to_Location_External_Reference__c</fullName>
    <formula>FulfilledFromLocation.ExternalReference</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfilled to Location External Reference</label>
    <type>Text</type>
</CustomField>