force-app/main/default/objects/FulfillmentOrder/fields/Fulfillment_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Order_Id__c</fullName>
    <label>Fulfillment Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>