force-app/main/default/objects/FulfillmentOrder/fields/SalesChannelExternalReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>SalesChannelExternalReferenceNumber__c</fullName>
    <label>SalesChannelExternalReferenceNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>