force-app/main/default/objects/FulfillmentOrder/fields/Shipment_Item__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment Item</label>
    <referenceTo>ShipmentItem</referenceTo>
    <relationshipLabel>Fulfillment Orders</relationshipLabel>
    <relationshipName>Fulfillment_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>