force-app/main/default/objects/FulfillmentOrder/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <label>Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>