force-app/main/default/objects/FulfillmentOrder/listViews/all_fulfillment_orders.listView-meta.xml
<ListView>
    <fullName>all_fulfillment_orders</fullName>
    <filterScope>Everything</filterScope>
    <label>All Fulfillment Orders</label>
</ListView>